--- a/gunicorn.service
+++ b/gunicorn.service
@@ -1,14 +1,14 @@
 [Unit]
-Description=gunicorn instance to server api
-Requires=gunicorn.socket
+Description=demo fastapi application
 After=network.target
 
 [Service]
-User=fastapi
-Group=fastapi
-WorkingDirectory=/home/fastapi/app/src/
-Environment="PATH=/home/fastapi/app/venv/bin"
-ExecStart=/home/fastapi/app/venv/bin/gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:8000
+User=sanjeev
+Group=sanjeev
+WorkingDirectory=/home/sanjeev/app/src/
+Environment="PATH=/home/sanjeev/app/venv/bin"
+EnvironmentFile=/home/sanjeev/.env
+ExecStart=/home/sanjeev/app/venv/bin/gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:8000
 
 [Install]
 WantedBy=multi-user.target
