--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,11 @@ on: [push, pull_request]
 jobs:
   job1:
     runs-on: ubuntu-latest
+    # environment:
+    #   name: testing
     env:
       DATABASE_HOSTNAME: localhost
-      DATABASE_PORT: 5432
+      DATABASE_PORT: ${{secrets.DATABASE_PORT}}
       DATABASE_PASSWORD: password123
       DATABASE_NAME: fastapi
       DATABASE_USERNAME: postgres
