--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,12 @@ on: [push, pull_request]
 jobs:
   job1:
     runs-on: ubuntu-latest
-    # environment:
-    #   name: testing
+    environment:
+      name: testing
     env:
       DATABASE_HOSTNAME: localhost
       DATABASE_PORT: ${{secrets.DATABASE_PORT}}
-      DATABASE_PASSWORD: password123
+      DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
       DATABASE_NAME: fastapi
       DATABASE_USERNAME: postgres
       SECRET_KEY: 09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7
