--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
           POSTGRES_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
           POSTGRES_DB: ${{secrets.DATABASE_NAME}}_test
         ports:
-          # - ${{secrets.DATABASE_PORT}}:${{secrets.DATABASE_PORT}}
-          - 5432:5432
+          - "${{secrets.DATABASE_PORT}}":"${{secrets.DATABASE_PORT}}"
+          # - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
